--- a/index.html
+++ b/index.html
@@ -165,5 +165,30 @@
         </div>
       </div>
     </section>
+    <!-- footer -->
+    <footer>
+      <div class="foot-heading">
+        <h1>Goal</h1>
+      </div>
+      <div class="foot-links">
+        <ul>
+          <li><a href="">Contact Us</a></li>
+          <li><a href="">Terms of Service</a></li>
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Privacy Settings</a></li>
+          <li><a href="">Goal App</a></li>
+          <li><a href="">Goal Live</a></li>
+        </ul>
+      </div>
+      <div class="foot-icons">
+        <i class="fa-brands fa-facebook-f"></i>
+
+        <i class="fa-brands fa-twitter"></i>
+
+        <i class="fa-brands fa-instagram"></i>
+
+        <i class="fa-brands fa-linkedin-in"></i>
+      </div>
+    </footer>
   </body>
 </html>
