--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
     <section class="mid-container">
       <!-- left-elements -->
       <div class="match-events">
-        <button class="event-btn">Upcoming Match</button>
+        <a class="event-btn" href="sub-web.html">Upcoming Match</a>
         <br />
-        <button class="event-btn">All Group</button>
+        <a class="event-btn" href="">All Group</a>
         <br />
-        <button id="active" class="event-btn">Blog</button>
+        <a id="active" class="event-btn" href="">Blog</a>
       </div>
       <!-- right-elements -->
       <div class="matches-info">
@@ -148,6 +148,10 @@
           <button class="match-btn">Transfer</button>
           <div class="match-text-box">
             <h2>Transfer Live:Chlesea in talks</h2>
+          </div>
+          <div class="match-icon">
+            <span><i class="fa-solid fa-clock"></i> 10h</span>
+            <span><i class="fa-solid fa-message"></i> 23</span>
           </div>
         </div>
         <div class="live-match">
