--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
     <title>World Cup</title>
   </head>
   <body>
@@ -16,11 +17,7 @@
     <section class="header-container">
       <div class="header-contents">
         <div class="head-text-box">
-          <h1>
-            The Greatest <br />
-            Show On The <br />
-            Earth
-          </h1>
+          <h1>The Greatest Show On The Earth</h1>
           <p>
             The FIFA World Cup, often simply called the World Cup, is an
             international association football competition contested by the
