--- a/sub-web.html
+++ b/sub-web.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
     <title>World Cup</title>
   </head>
   <body>
