--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <span><i class="fa-solid fa-message"></i> 23</span>
           </div>
         </div>
-        <div class="live-match">
+        <div id="m-hidden" class="live-match">
           <div class="match-img">
             <img src="images/Blog Image.png" alt="" />
           </div>
