--- a/index.html
+++ b/index.html
@@ -165,6 +165,14 @@
           </div>
         </div>
       </div>
+      <div class="view-btn">
+        <a
+          href="
+        #"
+          class="view-all-btn"
+          >View All <i class="fa-solid fa-greater-than"></i
+        ></a>
+      </div>
     </section>
     <!-- footer -->
     <footer>
