--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="media.css" />
+    <link
+      rel="shortcut icon"
+      href="favicon/android-chrome-512x512.png"
+      type="image/x-icon"
+    />
     <title>World Cup</title>
   </head>
   <body>
